# indicator-aggregator

./: .deepsource.toml  .env  .env.example  Cargo.toml  LICENSE  README.md  docker-compose.yml  makefile
backend/: .env  .gitignore  Cargo.toml  Dockerfile  Dockerfile.local  README.md  config.toml  makefile
backend/.sqlx/: query-0145a7be8dea51b8608a47f0e014bb0842fb617d5f5caeae9f36c2d0d2b772ad.json  query-2e89e0922a353a3506a94ff7a19924c8e39b80068f698d2927e0ce6106d150ea.json  query-354a16ef2ee73a8dc5282c0035b80ddf96bc789065566622bcd36df1d7defef5.json  query-4588e0faec57898daa34438cf47cbacd11101dbb809b37cef4dd57496dbf1975.json  query-468bf4e917d6a551163ef5913e0e0d2ef3079fcfba0025132290dabccf02b336.json  query-4781c00bd317c20776fbed1929964cefae93668b41347207d2cde7976e707bd1.json  query-53bd0ba9e1a5a20fad10fac752b9667b59077c6a9bafc788fbe7647055265893.json  query-5747ac69956d8a5a62daa6731314cd01dd31c70b0ee7564f175301301a1ac310.json  query-69fef090d156084b624685b952b5b6c7ba025f45324711f34603d774f23c5b1c.json  query-726053a377bc1afff5a4aaf330480c6805a63f873bb99013b0b007ccda5fb725.json  query-74284ff1c835585638eada508cd5b463face8b8e3be6714dcf769464dc56eb63.json  query-742abaac1905230ce4872aacfb3f4e1a6c898cd821e5516e4d3629528029f505.json  query-7c51337430beeb0ed6e1f244da727797194ab44b5049b15cd2bcba4fc4642fb9.json  query-7e7a57a89bb9ee2ab93c08147c4b63f9aac63f5d3612e042bdf24e621dd7b041.json  query-80f0179ea48473cb4b9554fe880563ed7577f7135326c7466e2eb5c21b829b2b.json  query-92f7f3324211a5ab2569ea26ef79378118f9a94b526296ec1c214feebbc2ffb0.json  query-9621ddb27810a379e3078e485abafc64ded56bcac16217b13585467f1da9ca5b.json  query-987287fb25e5574ac4ccd06d3dc7cbf05ce97e95c417f937cff27f9fe4d4090a.json  query-a12a18aad6897f25cc7bdedd2d4a18239be9422b057160b362da55a533c0fefd.json  query-bab5f626a8477b99429f0a527990bcdd1b57a74be478c55bd957f9c3ccdb44cf.json  query-bc6ab05029f207c13164b9fcddf80c10e16cc44a434380b83c65313e083bbe80.json  query-c7c3dd9a424b0afe91270223e90a4df3d08a42be10677a4fd86439ae29b2a6a3.json  query-c9cf82027cb2de63e2c6888e836985e0661e3373e946245a9599527d3160c764.json  query-c9ddffd56ef4efeb91bac9361da0711a9c4e62ba387fe8dd102af7819b3c7b1a.json  query-cf7cf19933d4422c1c39783f86fb6f06722cbe2656de10061a12985ba68fde41.json  query-d56558411c9e0ff07953f081e2482939e264d974da18d97a54d2a2611eb568f7.json  query-d7f3fb5b33fe657c610d79c021a21edf5be8405b6faf0bf65c8e651eeab691f9.json  query-dcd79efd49f8cc5dc216c1e5e83fc58be46ebc01a6fb427f4922836dcc346021.json  query-e214c7775149c216dfd1855a3ba64c19afa0f93b9c5d421f34f9f9c5ee37cece.json  query-eaaf1309cfb5138d838bf08189692e11bf83cb93a6a7b834c30350ea33173f09.json  query-ecea9cd73baf5e973afbf3d718426323c58622de0db24c633b7ebad99fc7f48e.json  query-ef55a8cadc1fa2b1d83dbfaa9a51da8f652a006660b6be2f90d0310449905eb7.json  query-f5d3523a8ecb67ea69ce4577c39c7103e4ae893f6af61ac2c7b52b0d83444538.json  query-f72f903d05b3fff282aeb2b9f1a2281636e5f3168e10d18f8267cc7913ec5738.json
backend/auth/: Cargo.toml
backend/auth/src/: config.rs  error.rs  google.rs  jwt.rs  lib.rs  microsoft.rs  middleware.rs  openid.rs
backend/cache/: Cargo.toml
backend/cache/src/: lib.rs
backend/cli/: Cargo.toml
backend/cli/src/: cli.rs  client.rs  config.rs  main.rs  persistence.rs  schemas.rs
backend/database/: Cargo.toml
backend/database/.sqlx/: query-0145a7be8dea51b8608a47f0e014bb0842fb617d5f5caeae9f36c2d0d2b772ad.json  query-049695977ac046bcf405cc1dbe8714866f7cd9f8bb361d60698dc1d3e7ad3ad7.json  query-0612bd248605a38a4b5bc7a8f5a4f654d23d375fb8763f410574e47451ce9e16.json  query-0760f7fbb4da315c9f86fc840496021b7265715399dfd1c0da79429269a2d29d.json  query-077d3167ae4d965b033e05a4b7db86b0ec2b72d1fdbb6fba1d62938bbaed2b83.json  query-09b293a89c3a2639a6dd08cd57dd2ea4b581d92d14eb9f120f05bf7e76ce69f2.json  query-09f561f469d7703fbfb36831efa83c9de837666362f9d44a328cbf949cc61712.json  query-0ca41525baf4202091694294c787bbf864bbe7b815841f1c6089f20dbbaee42f.json  query-0ccaf07c69feafff55b8a0cf76ad33ab9cc67ac1e3e948c4bc688005f3b8a30d.json  query-1070bd4a75ecef08b7cf116fd863ed07c39f408bf0e69279760c1e61a321f9d7.json  query-10f0b54d9fba2bf565863cd91d9e36bdb84d0a858c3d99c9a04e5b3f66a19f63.json  query-1296dff812e26292ac3d67b47f50ba2d93569f165e5cfc692ae4ab40f525fbd0.json  query-12bc871d4f12c337c12955974a95aa32042e05e0a1366a1b344c56c4f503d947.json  query-182251d57fd66d9af0fa508833ccf857615710b7c6984991049fcefee033b187.json  query-18e7544d6e7e5eaf43991e54843782bfac04256f3cfc915fe365f7e598d3574b.json  query-197327d259c4eb3881e3e096bfce3d6ca837c9919607b59baa382fd8b7e2cd50.json  query-2010953a644cdabf7260a55fde8459d1cb0dd39edb314ac188d87c1e807739e3.json  query-22f78c79d28c9d68c45c6b827293621971c8a2a12936c6c457d63b627afb0db1.json  query-293bfb0aafc812392ea975fc1d629af0c1f8b85e277f71f69c592460d90336cd.json  query-2b108fc26ee0f14ed3ea11647b8559716c919fcd7c0240818ca2ae1361ab6a63.json  query-2f0c72f38c477070ecb7602e91df5ea86568ae28f6b61fbb278b5e97a31e5261.json  query-2f1c1e38532fc477ca9c40012ff6addc7618ce61bc419260192127c5e54d9204.json  query-3546bcac31cbe9008837c8231ee91b5d6055738a80b97c49da14231b103ff27b.json  (+121 more)
backend/migrations/: 20240106215053_init.up.sql  20240113180919_url_haus.down.sql  20240113180919_url_haus.up.sql  20240113180927_phish_tank.down.sql  20240113180927_phish_tank.up.sql  20240113181940_seed_providers.down.sql  20240113181940_seed_providers.up.sql  20240113182600_seed_sources.up.sql  20240127221130_seed_ignore_lists.down.sql  20240127221130_seed_ignore_lists.up.sql  20240211171406_seed_server_config.down.sql  20240211171406_seed_server_config.up.sql
backend/scripts/: reset_db.sh
backend/server/: Cargo.toml  Dockerfile  Dockerfile.local  README.md  config.toml
backend/shared/: Cargo.toml
backend/sources/: Cargo.toml
backend/src/: background_tasks.rs  config.rs  crypto.rs  e_sources.rs  error.rs  hashing.rs  main.rs  schemas.rs  utils.rs  validators.rs
cache/: Cargo.toml
cache/src/: lib.rs
docs/: rest-api.md  (+3 more)
runners/common/: Cargo.toml
runners/python/: Cargo.toml  Dockerfile.local  config.toml
shared/: Cargo.toml
shared/src/: http.rs  lib.rs  telemetry.rs  tower.rs
(+553 files in other folders)
