[profile.release]
strip = true
lto = true
codegen-units = 1

[workspace]
members = ["backend", "cache", "shared"]
resolver = "2"

[workspace.dependencies]
async-trait = "0.1.77"
anyhow = "1.0.80"
axum = { version = "0.7.4", features = [
  "macros",
  "multipart",
  "tokio",
  "original-uri",
] }
axum-extra = { version = "0.9.2", features = ["query", "typed-header"] }
chrono = { version = "0.4.35", features = ["serde"] }
figment = { version = "0.10.14", features = ["env", "toml"] }
futures-util = "0.3.30"
http = "1.1.0"
hyper = "1.2.0"
redis = { version = "0.24.0", features = ["tokio-comp"] }
reqwest = { version = "0.11.24", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sqlx = { version = "0.7.3", features = [
  "runtime-tokio-native-tls",
  "postgres",
  "uuid",
  "macros",
  "chrono",
  "json",
] }
strum = { version = "0.26.1", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = [
  "trace",
  "cors",
  "compression-gzip",
  "timeout",
  "set-header",
  "propagate-header",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
typeshare = "1.0.2"
uuid = { version = "1.7.0", features = ["serde", "v4"] }
validator = { version = "0.16.1", features = ["derive"] }
