[profile.release]
codegen-units = 1
lto = true
strip = true

[workspace]
members = ["cache", "database", "runners/common", "runners/python", "server", "shared", "sources"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.82"
async-trait = "0.1.80"
axum = { version = "0.7.5", features = ["json"] }
axum-extra = { version = "0.9.3", features = ["query", "typed-header"] }
chacha20poly1305 = "0.10.1"
chrono = { version = "0.4.37", features = ["serde"] }
csv = "1.3.0"
figment = { version = "0.10.16", features = ["env", "toml"] }
flate2 = "1.0.28"
futures-util = "0.3.30"
hickory-resolver = { version = "0.24.0", features = ["serde-config"] }
http = "1.1.0"
http-body-util = "0.1.1"
hyper = "1.2.0"
once_cell = "1.19.0"
opentelemetry = "0.22.0"
opentelemetry-jaeger = { version = "0.21.0", features = ["rt-tokio"] }
opentelemetry-otlp = "0.15.0"
opentelemetry-stdout = { version = "0.3.0", features = ["trace"] }
opentelemetry_sdk = { version = "0.22.1", features = ["rt-tokio-current-thread"] }
prost = "0.12.4"
pyo3 = "0.21.1"
redis = { version = "0.25.3", features = ["tokio-comp"] }
regex = "1.10.4"
reqwest = { version = "0.12.3", features = ["json"] }
sentry = "0.32.2"
sentry-tower = { version = "0.32.2", features = ["http"] }
sentry-tracing = "0.32.2"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
sqlx = { version = "0.7.4", features = ["chrono", "json", "macros", "migrate", "postgres", "runtime-tokio-native-tls", "uuid"] }
strum = { version = "0.26.2", features = ["derive"] }
tokio = { version = "1.37.0", features = ["parking_lot", "rt", "rt-multi-thread"] }
tokio-stream = "0.1.15"
tonic = "0.11.0"
tonic-build = "0.11.0"
tonic-health = "0.11.0"
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["compression-gzip", "cors", "propagate-header", "set-header", "timeout", "trace"] }
tracing = "0.1.40"
tracing-opentelemetry = "0.23.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-test = "0.2.4"
typeshare = "1.0.2"
url = "2.5.0"
utoipa = { version = "4.2.0", features = ["axum_extras", "chrono", "preserve_order", "uuid"] }
utoipa-swagger-ui = { version = "6.0.0", features = ["axum"] }
uuid = { version = "1.8.0", features = ["serde", "v4"] }
validator = { version = "0.18.1", features = ["derive"] }
zip = "0.6.6"
