[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
http = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

opentelemetry = "0.22.0"
opentelemetry-jaeger = { version = "0.21.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.15.0" }
opentelemetry-stdout = { version = "0.3.0", features = ["trace"] }
opentelemetry_sdk = { version = "0.22.1", features = [
  "rt-tokio-current-thread",
] }
tracing-opentelemetry = "0.23.0"
sentry = "0.32.2"
sentry-tracing = "0.32.2"
sentry-tower = { version = "0.32.2", features = ["http"] }
