[package]
edition = "2021"
name = "shared"
version = "0.1.0"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
http = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-jaeger = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry-stdout = { workspace = true }
opentelemetry_sdk = { workspace = true }
sentry = { workspace = true }
sentry-tower = { workspace = true }
sentry-tracing = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
