[package]
edition = "2021"
name = "auth"
version = "0.1.0"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
axum-core = { workspace = true }
axum-extra = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
http = { workspace = true }
hyper = { workspace = true }
jsonwebtoken = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
typeshare = { workspace = true }
utoipa = { workspace = true }

database = { path = "../database" }
shared = { path = "../shared" }
