[package]
edition = "2021"
name = "cache"
version = "0.1.0"

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
redis = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
typeshare = { workspace = true }
