[package]
edition = "2021"
name = "database"
version = "0.1.0"

[dependencies]
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
strum = { workspace = true }
tracing = { workspace = true }
typeshare = { workspace = true }
utoipa = { workspace = true }
uuid = { workspace = true }
validator = { workspace = true }

shared = { path = "../shared" }
