[package]
edition = "2021"
name = "server"
version = "0.1.0"

[dependencies]
axum = { workspace = true }
axum-extra = { workspace = true }
chrono = { workspace = true }
figment = { workspace = true }
futures-util = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
typeshare = { workspace = true }
url = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
uuid = { workspace = true }

cache = { path = "../cache" }
common = { path = "../runners/common" }
database = { path = "../database" }
shared = { path = "../shared" }
sources = { path = "../sources" }
