[package]
edition = "2021"
name = "sources"
version = "0.1.0"

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
csv = { workspace = true }
flate2 = { workspace = true }
futures-util = { workspace = true }
hickory-resolver = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
typeshare = { workspace = true }
utoipa = { workspace = true }
uuid = { workspace = true }
zip = { workspace = true }

cache = { path = "../cache" }
common = { path = "../runners/common" }
database = { path = "../database" }
shared = { path = "../shared" }
