[package]
edition = "2021"
name = "common"
version = "0.1.0"

[dependencies]
figment = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
tonic = { workspace = true }
tonic-health = { workspace = true }
tracing = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
